--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 body {
   height: 95%;
   width: 95%;
-  /* border: 1px black solid; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,18 +34,24 @@ li {
   padding: 5px;
   display: flex;
   width: 300px;
+  position: relative;
+  padding-bottom: 20px;
 }
 
 label {
   padding-right: 5px;
+  /* word-wrap: none; */
+  white-space: nowrap;
 }
 
 input {
   flex: 1;
-  /* box-shadow: 0 0 0 #cc0000; */
   appearance: none;
   border: 1px solid rgb(224, 220, 220);
   border-radius: 3px;
+  padding: 1px 5px 1px 5px;
+  max-height: 15px;
+  min-width: 50px;
 }
 
 legend {
@@ -72,4 +77,13 @@ fieldset {
   background-color: white;
   border-radius: 10px;
   border: 0;
+}
+
+div {
+  position: absolute;
+  top: 25px;
+  right: 5px;
+  /* left: 90px; */
+  color: red;
+  font-size: smaller;
 }
