--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   width: 100%;
   background-color: white;
   min-height: 350px;
+  min-width: 600px;
 }
 body {
   height: 95%;
@@ -31,7 +32,7 @@ form {
   width: 50%;
 }
 
-li {
+.form-list-items > li {
   padding: 5px;
   display: flex;
   width: 300px;
@@ -55,8 +56,23 @@ input {
   min-width: 50px;
 }
 
+.form-list-items > li {
+  position: relative;
+}
+
 input:valid {
   border-color: rgb(61, 227, 61);
+}
+
+input:valid + span::after {
+  position: absolute;
+  content: "☺";
+  top: 5px;
+  right: -10px;
+}
+
+input:valid + span {
+  border: 1px green solid;
 }
 
 input:invalid.user-focused {
@@ -77,6 +93,8 @@ ul {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 fieldset {
@@ -113,11 +131,10 @@ li:has(.submit) {
   width: 100%;
   height: 100%;
   background-color: rgba(240, 248, 255, 0.7);
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(5px);
 }
 
 .modal-message {
-  display: none;
   z-index: 2;
   position: fixed;
   width: 50%;
@@ -127,4 +144,22 @@ li:has(.submit) {
   left: 25%;
   top: 25%;
   border-radius: 5px;
+}
+
+.close-button {
+  width: 80px;
+}
+
+.modal-message > ul {
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.modal-message > ul > li {
+  padding-bottom: 5%;
+}
+
+h2 {
+  font-size: 1.2rem;
+  text-align: center;
 }
